# Hexa-Puffs

./: .claude_context.md  .gitignore  Annabelle vs OpenClaw deep dive v2.md  Annabelle vs OpenClaw deep dive.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  GETTING-STARTED.md  HOW-TO-ADD-NEW-MPC.md  How-to-connect-to-Claude.md  LICENSE  LICENSE.txt  NOTICE  OpenClaw_Decision_Flowchart.mermaid  OpenClaw_Diagrams.html  OpenClaw_Waterfall_Sequence.mermaid  README.md  SECURITY.md  SYSTEM_ARCHITECTURE.md  StateOfApp-Feb4.md  TESTING.md  agents.json  agents.json.example  annabelle-vs-openclaw.md  browser-mcp-plan.md  command-list.md  comparison-with-openclaw.md  external-mcps.json  getting-started.md  guardian-config.ts  how-to-add-new-mcp.md  how-to-connect-to-claude.md  mcpspecification.md  mocked-embed-results.md  new-mcp-plan.md  rebuild-all.sh  rebuild.sh  restart.sh  start-all.sh  (+8 more)
.Documentation/: architecture.md  commands.md  cost-controls.md  costcontrols.md  error-patterns.md  external-mcp.md  guardian.md  logging.md  mcps.md  memory-system.md  prompt-creation.md  sessions.md  startup.md  (+3 more)
LinkedIn-MCP/: README.md  diag.py  diag2.py  package.json  pyproject.toml
LinkedIn-MCP/src/: linkedin_client.py  main.py  response.py
LinkedIn-MCP/src/tools/: messaging.py  network.py  posts.py  profile.py  search.py
LinkedIn-MCP/tests/: conftest.py
LinkedIn-MCP/tests/e2e/: test_live.py
LinkedIn-MCP/tests/integration/: conftest.py  test_stdio.py
LinkedIn-MCP/tests/unit/: test_messaging.py  test_network.py  test_posts.py  test_profile.py  test_search.py
(+768 files in other folders)
